Updated hard-coded and generalised in styles

--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -8,85 +8,51 @@
     tools:context="com.aman.udacityportfolio.MenuActivity"
     tools:showIn="@layout/activity_menu">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/naondeg_heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
             android:layout_margin="@dimen/text_margin"
+            android:layout_marginTop="20dp"
             android:text="@string/my_nanodegree_apps"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_marginTop="20dp"/>
+            android:textStyle="bold" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/button_movies"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/naondeg_heading"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:text="Popular Movies"
-            android:padding="10dp" />
+            style="@style/content_menu_button"
+            android:text="@string/popular_movies" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/button_stock"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/button_movies"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:text="Stock Hawk"
-            android:padding="10dp" />
+            style="@style/content_menu_button"
+            android:text="@string/stock_hawk" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/button_bigger"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/button_stock"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:text="Build it Bigger"
-            android:padding="10dp" />
+            style="@style/content_menu_button"
+            android:text="@string/build_it_bigger" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/button_material"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/button_bigger"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:text="Make Your App Material"
-            android:padding="10dp" />
+            style="@style/content_menu_button"
+            android:text="@string/make_your_app_material" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/button_ubiquitous"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/button_material"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:text="Go Ubiquitous"
-            android:padding="10dp" />
+            style="@style/content_menu_button"
+            android:text="@string/go_ubiquitous" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/button_capstone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/button_ubiquitous"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:text="Capstone"
-            android:padding="10dp" />
+            style="@style/content_menu_button"
+            android:text="@string/capstone" />
 
-    </RelativeLayout>
+    </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
