--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,12 +5,13 @@
     <color name="colorAccent">@color/accent</color>
     <color name="white">#FFF</color>
 
+    <color name="toolbar_bg">#00212121</color>
+
+    <color name="black_alpha_40">#88000000</color>
+
     <color name="primary">#F44336</color>
     <color name="primary_dark">#D32F2F</color>
-    <color name="primary_light">#FFCDD2</color>
     <color name="accent">#FFC107</color>
     <color name="primary_text">#212121</color>
-    <color name="secondary_text">#757575</color>
-    <color name="icons">#FFFFFF</color>
-    <color name="divider">#BDBDBD</color>
+    <color name="secondary_text">#424242</color>
 </resources>
